scrollbar issue?

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -14,9 +14,6 @@ body {
 }
 
 /* #region SCROLLBAR */
-body::-webkit-scrollbar{
-    width: 0;
-}
 @media (min-width: 1024px){
     body::-webkit-scrollbar {
         width: 8px;
